--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tauri-apps/api": "^1.5.2",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "4.x",
     "pinia": "^2.1.7",
     "vue": "^3.3.4"
